# url_shortener

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
static/js/: ajax.js
templates/: base.html
url/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
url/migrations/: 0001_initial.py  0002_alter_shortener_long_url.py
url/templates/url/: add_url.html  url_list.html
users/: admin.py  authentication.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_role.py
users/templates/users/: admin_template.html  login.html  register.html  user_form.html
