[tool.poetry]
name = "urlshortener"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
django-debug-toolbar = "^4.4.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
